# MCQer

./: LICENSE  README.md  pyproject.toml
mcqer/: main.py
