[tool.poetry]
name = "MCQer"
version = "0.1.0"
description = "A tool which helps you do your mcq stuff"
authors = ["amazinglySK <shashwat07ktm@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.scripts]
mcqer = "mcqer.main:app"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
